Add split out cost for pending and approved

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -173,6 +173,11 @@ body {
           }
         }
       }
+
+      .modalInfo {
+        width: 98%;
+        height: 50;
+      }
     
       section {
         width: 50%;
