--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,1 +1,3 @@
-$background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%)
+$background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+$mainFont: "Hedvig Letters Serif", serif;
+
