--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,1 +1,375 @@
-@import './variables'  
+@import './variables' ; 
+
+body {
+    background: rgb(14, 20, 36);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 100vh;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-around;
+        .topNav{
+            border: black solid thin;
+            max-height: 60px;
+            display: flex;
+            flex-wrap: nowrap;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            width: 100%;
+            margin-bottom: 60px;
+            background: rgb(66, 84, 131);
+            section {
+            height: 75%;
+            input{
+                font-family: arial;
+                font-weight: bold;
+                color: #14396A !important;
+                font-size: 13px;
+                text-shadow: 0px 0px 0px #8EC6FF;
+                box-shadow: 2px 2px 6px #15191C;
+                padding: 10px 25px;
+                border-radius: 10px;
+                border: 2px solid #3866A3;
+                background: #63B8EE;
+                background: linear-gradient(to top, #63B8EE, #468CCF);
+                &:hover{
+                    color: #14396A !important;
+                    background: #468CCF;
+                    background: linear-gradient(to top, #468CCF, #63B8EE);
+                    cursor: pointer;
+                }
+            }
+            }
+            img{
+                width: 50px;
+            }
+    
+            .currentUser {
+                width: 90%;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                justify-content: flex-end;
+    
+                h3{
+                color: white;
+                font-size: larger;
+                }
+    
+            }
+        }
+  
+      .welcomeContainer {
+        width: 80%;
+        height: 80vh;
+        border: #5dcbdd9e solid thick;
+        box-shadow: #5dcbddb3 0px 0px 20px 11px;
+        border-radius: 30px;
+        border-style: inset;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+  
+        .logIn {
+          background: rgb(14 20 36);
+          height: 60%;
+          width: 60%;
+          border: white solid thin;
+          border-radius: 30px;
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          justify-content: flex-start;
+          
+          h1{
+            color: rgb(242 242 242);
+            font-size: 50px;
+          }
+  
+          .inputContainer {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+  
+            label {
+              color: white;
+              margin: 5px;
+            }
+  
+            input{
+              color: rgb(242 242 242);
+              background: rgb(30 40 57);
+              border-color: rgb(44 51 73);
+              border-radius: 0.5rem;
+              height: 50px;
+              width: 220px;
+              font-size: larger;
+            }
+  
+            .userNames {
+              color: white;
+              background: grey;
+              :hover {
+                background-color: black;
+                cursor: pointer;
+              }
+            }
+  
+            .loginButton{
+              font-family: arial;
+              font-weight: bold;
+              color: #14396A !important;
+              font-size: 13px;
+              text-shadow: 0px 0px 0px #8EC6FF;
+              box-shadow: 2px 2px 6px #15191C;
+              padding: 10px 25px;
+              border-radius: 10px;
+              border: 2px solid #3866A3;
+              background: #63B8EE;
+              background: linear-gradient(to top, #63B8EE, #468CCF);
+              margin-top: 10px;
+                &:hover{
+                  color: #14396A !important;
+                  background: #468CCF;
+                  background: linear-gradient(to top, #468CCF, #63B8EE);
+                  cursor: pointer;
+                }
+  
+            }
+  
+          }
+  
+        }
+  
+      }
+      .dashboardContainer{
+
+        .clientDashboard {
+            width: 60%;
+            max-height: 70vh;
+            background: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 64px;
+            box-shadow: rgba(35, 111, 178, 0.6705882353) 11px 6px 20px 0px;
+            
+            article {
+            width: 100%;
+            height: 30px;
+            background: rgb(66 84 131);
+            border-bottom: yellow solid thin;
+            margin-bottom: -1px;
+            color: white;
+            text-align: center;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+            align-items: center;
+        
+            &:hover {
+                background: rgb(16 21 33);
+                cursor: pointer;
+            }
+            p:nth-child(1){
+                margin-left: 10px;
+            }
+            p:nth-child(2){
+                margin-right: 10px;
+                transform: rotate(180deg);
+            }
+            }
+        
+            .expanded{
+            p:nth-child(2){
+                margin-right: 10px;
+                transform: rotate(90deg);
+            }
+            }
+        
+            .collapsed {
+            width: 98%;
+            height: 0px !important;
+            border: black solid thin;
+            }
+        
+            .tripList, .spentList {
+            width: 98%;
+            height: 50%;
+            overflow: overlay;
+            border: black solid thin;
+            table {
+                width: 100%;
+                font-size: 13px;
+            }
+            .tableHeader {
+                font-weight: bold;
+                th {
+                    height: 20px;
+                    font-weight: 200;
+                }
+            }
+            th{
+                border: black solid thin;
+                text-align: left;
+                max-height: 20px;
+                padding: 0px;
+                img {
+                width: 140px;
+                }
+                p{
+        
+                &:hover{
+                    cursor: pointer;
+                    color: #15191C;
+                    font-style: italic;
+                }
+                }
+            }
+            }
+        }
+      }
+
+      .interfaceContainer{
+
+        .clientInteraction {
+            background: white;
+            width: 80%;
+            height: 70vh;
+            background: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 64px;
+            box-shadow: rgba(35, 111, 178, 0.6705882353) 11px 6px 20px 0px;
+        }
+      }
+
+      .clientMain {
+        height: 100vh;
+        width: 50%;
+        display: flex;
+        flex-direction: row;
+        align-content: flex-start;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+      }
+
+      dialog:modal{
+        width: 50%;
+        height: 50%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-wrap: wrap;
+      
+        nav{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            background: rgb(66, 84, 131);
+            border-bottom: yellow solid thin;
+            color: white;
+
+          .titleContainer{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: flex-start;
+            align-items: center;
+            width: 50%;
+            padding-left: 5px;
+            h4{
+                margin-left: 5px;
+                margin-right: 5px;
+            }
+          }
+          .buttonContainer{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: flex-end;
+            align-items: flex-end;
+            width: 50%;
+            padding-right: 5px;
+            button{
+                margin-left: 0px;
+                margin-right: 0px;
+                &:hover{
+                  cursor: pointer;
+                  color: #15191C;
+                  font-style: italic;
+                }
+              }
+          }
+        }
+      
+        section {
+            width: 50%;
+            height: 85%;
+        }
+
+        th{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-start;
+        }
+
+        h3{ 
+
+        }
+
+        p{
+            padding-left: 50px;
+        }
+      
+      }
+  }
+
+  
+  #tableContainer{
+    display: flex;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+      .table{
+        width: 33%;
+        table{
+          width: 90%;
+        #dataDump {
+          tr{
+              
+            th {
+              border: black solid thin;
+              img{
+                width: 10%;
+                height: 10%;
+              }
+              }
+            }
+          }
+        }
+      }
+  }
+  
+  .devBox{
+    width:50px;
+    height: 50px;
+    border: black solid thin;
+    background: white;
+  }
+  
+  .hidden {
+    display: none !important;
+  }
+  
