--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -237,7 +237,6 @@ body {
       .interfaceContainer{
 
         .clientInteraction {
-            background: white;
             width: 80%;
             height: 70vh;
             background: white;
@@ -246,6 +245,57 @@ body {
             align-items: center;
             min-height: 64px;
             box-shadow: rgba(35, 111, 178, 0.6705882353) 11px 6px 20px 0px;
+                header{
+                    width: 100%;
+                    height: 30px;
+                }
+
+                main {
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    justify-content: space-between;
+                    align-items: flex-start;
+                    aside{
+                        height: 100%;
+                        width: 30%;
+                        border: rgb(66, 84, 131) solid;
+                        h3{
+                            background: rgb(66, 84, 131);
+                            color: white;
+                            text-align: center;
+                            height: 50px;
+                            display: flex;
+                            flex-direction: row;
+                            flex-wrap: wrap;
+                            align-content: center;
+                            justify-content: center;
+                            align-items: center;
+                            &:hover {
+                                cursor: pointer;
+                                color: #15191C;
+                                font-style: italic;
+                            }
+                        }
+                    }
+                    section {
+                        width: 68%;
+                        height: 100%;
+                        border: black solid thin;
+                        form{
+                            @include formStyling;
+                        }
+                    }
+
+                }
+
+                footer{
+                    width: 100%;
+                    height: 30px;
+                }
+
         }
       }
 
@@ -260,7 +310,7 @@ body {
         align-items: flex-start;
       }
 
-      dialog:modal{
+      .tripModal:modal{
         width: 50%;
         height: 50%;
         display: flex;
@@ -269,7 +319,7 @@ body {
         align-items: flex-start;
         flex-wrap: wrap;
       
-        nav{
+        .modalHeader{
             width: 100%;
             display: flex;
             flex-direction: row;
@@ -335,6 +385,75 @@ body {
       }
   }
 
+  .destModal:modal{
+    width: 50%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+
+    .modalHeader{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        background: rgb(66, 84, 131);
+        border-bottom: yellow solid thin;
+        color: white;
+
+      .titleContainer{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-items: center;
+        width:100%;
+        padding-left: 5px;
+        h4{
+            margin-left: 5px;
+            margin-right: 5px;
+        }
+      }
+      .buttonContainer{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+        align-items: flex-end;
+        width: 65%;
+        padding-right: 5px;
+        button{
+            margin-left: 0px;
+            margin-right: 0px;
+            &:hover{
+              cursor: pointer;
+              color: #15191C;
+              font-style: italic;
+            }
+          }
+      }
+    }
+
+    table{
+    width: 100%;
+
+    tbody{
+        width: 100%;
+    }
+
+    }
+    th, td{
+        border: black solid thin;
+        &:hover{
+          background: aliceblue;
+          cursor: pointer;  
+        }
+    }
+  }
+
   
   #tableContainer{
     display: flex;
@@ -367,6 +486,32 @@ body {
     height: 50px;
     border: black solid thin;
     background: white;
+  }
+
+/* Hide the label initially */
+span label::after {
+    display: none;
+  }
+
+   *:disabled {
+    background: grey !important;
+    &:hover{
+        cursor: not-allowed !important;
+    }
+}
+input.readOnly {
+    background: grey !important;
+    &:hover{
+        cursor: not-allowed !important;
+    }
+}
+
+  
+  /* Show the label after the input field when it has the 'readOnly' class */
+  span input.readOnly + label::after {
+    content: " (AutoFilled)";
+    color: gray;
+    display: inline-block;
   }
   
   .hidden {
