Add booking form pg 2. Post pending

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -49,9 +49,16 @@ $mainFont: "Hedvig Letters Serif", serif;
     span{
         display: flex;
         flex-direction: row;
-        align-items: flex-end;
+        align-items: baseline;
+        flex-wrap: wrap;
+
         p{
             margin-left: 1px;
+        }
+
+        h4{
+            margin: 6px;
+            text-decoration: underline;
         }
     }
     .dateSpan{
