Creating separate branch to test a major rework

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -51,6 +51,7 @@ $mainFont: "Hedvig Letters Serif", serif;
         flex-direction: row;
         align-items: baseline;
         flex-wrap: wrap;
+        width: 100%;
 
         p{
             margin-left: 1px;
