--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,21 +5,21 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     flex-wrap: wrap;
     align-content: flex-start;
     justify-content: space-around;
         .topNav{
-            border: black solid thin;
-            max-height: 60px;
-            display: flex;
-            flex-wrap: nowrap;
-            flex-direction: row;
-            justify-content: flex-start;
-            align-items: center;
-            width: 100%;
-            margin-bottom: 60px;
-            background: rgb(66, 84, 131);
+          border: black solid thin;
+          max-height: 60px;
+          display: flex;
+          flex-wrap: nowrap;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: center;
+          width: 100%;
+          margin-bottom: 5px;
+          background: rgb(66, 84, 131);
             section {
             height: 75%;
             input{
@@ -61,90 +61,107 @@ body {
             }
         }
   
-      .welcomeContainer {
-        width: 80%;
-        height: 80vh;
-        border: #5dcbdd9e solid thick;
-        box-shadow: #5dcbddb3 0px 0px 20px 11px;
-        border-radius: 30px;
-        border-style: inset;
+      
+      .landing {
+        width: 100%;
+        height: 100vh;
         display: flex;
+        flex-direction: row;
+        align-items: flex-start;
         justify-content: center;
-        align-items: center;
-  
-        .logIn {
-          background: rgb(14 20 36);
-          height: 60%;
-          width: 60%;
-          border: white solid thin;
-          border-radius: 30px;
-          display: flex;
-          align-items: center;
-          flex-direction: column;
-          justify-content: flex-start;
-          
-          h1{
-            color: rgb(242 242 242);
-            font-size: 50px;
-          }
-  
-          .inputContainer {
+
+          .welcomeContainer {
+            width: 30%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            padding-top: 100px;
+    
+          .logIn {
+            background: rgb(14, 20, 36);
+            height: 100%;
+            width: 30%;
             display: flex;
             align-items: center;
-            justify-content: center;
             flex-direction: column;
-  
-            label {
-              color: white;
-              margin: 5px;
-            }
-  
-            input{
+            justify-content: flex-start;
+            
+            h1{
               color: rgb(242 242 242);
-              background: rgb(30 40 57);
-              border-color: rgb(44 51 73);
-              border-radius: 0.5rem;
-              height: 50px;
-              width: 220px;
-              font-size: larger;
+              font-size: 50px;
             }
-  
-            .userNames {
-              color: white;
-              background: grey;
-              :hover {
-                background-color: black;
-                cursor: pointer;
+    
+            .inputContainer {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              flex-direction: column;
+    
+              label {
+                color: white;
+                margin: 5px;
               }
-            }
-  
-            .loginButton{
-              font-family: arial;
-              font-weight: bold;
-              color: #14396A !important;
-              font-size: 13px;
-              text-shadow: 0px 0px 0px #8EC6FF;
-              box-shadow: 2px 2px 6px #15191C;
-              padding: 10px 25px;
-              border-radius: 10px;
-              border: 2px solid #3866A3;
-              background: #63B8EE;
-              background: linear-gradient(to top, #63B8EE, #468CCF);
-              margin-top: 10px;
-                &:hover{
-                  color: #14396A !important;
-                  background: #468CCF;
-                  background: linear-gradient(to top, #468CCF, #63B8EE);
+    
+              #userNameField, #passwordField{
+                font: inherit;
+                color: white;
+                border: 0;
+                height: 1.1876em;
+                margin: 14px;
+                padding: 6px 0 7px;
+                min-width: 0;
+                background: none;
+                animation-name: mui-auto-fill-cancel;
+                letter-spacing: inherit;
+                animation-duration: 10ms;
+                border-bottom: white solid thin;
+                text-align: center;
+                &:hover {
+                  background-color: black;
                   cursor: pointer;
                 }
-  
+              }
+    
+              .loginButton{
+                width: 100%;
+                display: inherit;
+                align-items: inherit;
+                justify-content: inherit;
+                margin-top: 15px;
+                background: linear-gradient(to top, #63B8EE, #468CCF);
+                height: 30px;
+                color: white;
+                  &:hover{
+                    color: #14396A !important;
+                    background: #468CCF;
+                    background: linear-gradient(to top, #468CCF, #63B8EE);
+                    cursor: pointer;
+                  }
+    
+              }
+    
             }
-  
+    
           }
-  
+    
         }
-  
+
+        .graphic{
+          display: flex;
+          justify-content: center;
+          align-items: stretch;
+          height: 100vh;
+          width: 70%;
+
+          img{
+            width: 100%;
+          }
+        }
+
       }
+
       .dashboardContainer{
 
         .clientDashboard {
@@ -205,30 +222,28 @@ body {
             table {
                 width: 100%;
                 font-size: 13px;
-            }
-            .tableHeader {
-                font-weight: bold;
-                th {
-                    height: 20px;
-                    font-weight: 200;
-                }
-            }
-            th{
-                border: black solid thin;
-                text-align: left;
-                max-height: 20px;
-                padding: 0px;
-                img {
-                width: 140px;
-                }
-                p{
-        
-                &:hover{
+            tbody {
+                .tableHeader {
+                  font-weight: bold;
+
+              }
+              tr{
+
+                td{
+                    border: black solid thin;
+                  
+                  &:hover {
+                    background: aliceblue;
                     cursor: pointer;
-                    color: #15191C;
-                    font-style: italic;
+                  }
+
+                  p{
+
+                  }
                 }
-                }
+              }
+            }
+
             }
             }
         }
@@ -263,16 +278,19 @@ body {
                         width: 30%;
                         border: rgb(66, 84, 131) solid;
                         h3{
-                            background: rgb(66, 84, 131);
-                            color: white;
-                            text-align: center;
-                            height: 50px;
-                            display: flex;
-                            flex-direction: row;
-                            flex-wrap: wrap;
-                            align-content: center;
-                            justify-content: center;
-                            align-items: center;
+                          background: rgb(66, 84, 131);
+                          color: white;
+                          text-align: center;
+                          height: 50px;
+                          display: flex;
+                          flex-direction: row;
+                          flex-wrap: wrap;
+                          align-content: center;
+                          justify-content: center;
+                          align-items: center;
+                          margin: 8px;
+                          border-radius: 5px;
+                          box-shadow: #3b84c473 4px 8px 20px;
                             &:hover {
                                 cursor: pointer;
                                 color: #15191C;
@@ -306,17 +324,40 @@ body {
         }
       }
 
+      .clientOverview {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        justify-content: center;
+        align-items: flex-start;
+        width: 100%;
+        height: 100vh;
+
+        .tabPanel {
+          background-color: white;
+          width: 85%;
+          height: 85%;
+          display: flex;
+          flex-wrap: wrap;
+          flex-direction: row;
+          align-content: flex-start;
+          justify-content: center;
+          align-items: flex-start;
+      
       .clientMain {
         height: 100vh;
-        width: 50%;
+        width: 100%;
         display: flex;
         flex-direction: row;
         align-content: flex-start;
         flex-wrap: wrap;
         justify-content: center;
         align-items: flex-start;
+        margin-top: 65px;
       }
-
+    }
+ }
       .tripModal:modal{
         width: 50%;
         height: 50%;
@@ -358,8 +399,8 @@ body {
             width: 50%;
             padding-right: 5px;
             button{
-                margin-left: 0px;
-                margin-right: 0px;
+              margin-left: 10px;
+              margin-right: 10px;
                 &:hover{
                   cursor: pointer;
                   color: #15191C;
@@ -375,10 +416,11 @@ body {
         }
 
         th{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: flex-start;
+          height: 20px;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
         }
 
         h3{ 
