--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -74,7 +74,7 @@ body {
 
                 }
 
-                .userInfo{
+                .userDetails{
                   height: 190px;
                   width: 200px;
                   position: absolute;
@@ -271,22 +271,23 @@ body {
             border: black solid thin;
             }
         
-            .tripList, .spentList {
+            .tripList{
               width: 100%;
-              height: 40%;
+              height: 100%;
               overflow: overlay;
               border: black solid thin;
             table {
                 width: 100%;
                 font-size: 13px;
             tbody {
+
                 .tableHeader {
                   font-weight: bold;
 
               }
               tr{
-                
-
+                text-align: center;
+                font-size: 18px;
                 &:hover {
                   border:black solid thin;
                   background: aliceblue;
@@ -294,15 +295,14 @@ body {
                   cursor: pointer;
                 }
                 td{
-
-                  
-
-
+                  text-align: center;
+                  font-size: 15px;
                   p{
 
                   }
                 }
               }
+              
             }
 
             }
