--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -679,6 +679,51 @@ body {
   }
 }
 
+.wikiModal{
+  width:50%;
+  height: 50%;
+  div{
+    width:100%;
+    height: 100%;
+  }
+  iframe{
+    width:100%;
+    height: 100%;
+  }
+}
+
+
+.mapModal {
+  width: 75%;
+  height: 80%;
+
+    #map {
+      width: 100%;
+      height: 100%;
+
+      gmp-map{
+        width: 100%;
+        height: 100%;
+      }
+
+    }
+
+    .wikiModal {
+      width: 50%;
+      height: 60%;
+      position: absolute;
+      z-index: 3;
+      top: 85px;
+      div{
+        width: 100%;
+        height: 97%;
+        iframe {
+          height: 100%;
+        }
+      }
+    }
+}
+
 .devBox {
   width: 50px;
   height: 50px;
