--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -366,6 +366,9 @@ body {
               color: #15191c;
               font-style: italic;
             }
+            &.clicked {
+              background: linear-gradient(to top, #63b8ee, #468ccf)
+            }
           }
         }
 
@@ -694,12 +697,12 @@ body {
 
 
 .mapModal {
-  width: 75%;
-  height: 80%;
+  width: 60%;
+  height: 65%;
 
     #map {
       width: 100%;
-      height: 100%;
+      height: 96%;
 
       gmp-map{
         width: 100%;
