--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -727,6 +727,28 @@ body {
     }
 }
 
+.progressBar {
+  position: absolute;
+  width: 500px;
+  height: 60px;
+  background-color: aliceblue;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  padding: 7px;
+  left: 330px;
+  top: 260px;
+  flex-direction: column;
+  h3 {
+    margin: 8px;
+  }
+  .bar {
+    width: 0%;
+    height: 10%;
+    background: blue;
+  }
+}
+
 .devBox {
   width: 50px;
   height: 50px;
